# nerfify-code

./: .gitignore  demo.html  readme.md
nerfify/: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  config.py  demo.html  eval.py  litellm_proxy.py  main.py  main_api.py  read_tb.py  requirements.txt  web.py
nerfify-crew/: .env.example  config.py  crew.py  main.py  pyproject.toml  tasks.py  web.py
nerfify-crew/PapersAndCode/: VanillaNerfOriginal.py  code1.py  code4.py  paper2.md  paper5.md
nerfify-crew/agents/: __init__.py  definitions.py  prompts.py
nerfify-crew/base-code/: README.md
nerfify-crew/base-code/method_template/: __init__.py  template_model.py  template_pipeline.py
nerfify-crew/templates/: index.html
nerfify-crew/tools/: __init__.py  clean_paper.py  file_ops.py  shell.py  web_search.py
nerfify/PapersAndCode/: code2.py  code3.py  code5.py  paper1.md  paper3.md  paper4.md
nerfify/agents/: __init__.py  definitions.py
nerfify/base-code/: pyproject.toml
nerfify/base-code/method_template/: template_config.py  template_datamanager.py  template_field.py
nerfify/implementations/: README.md
nerfify/implementations/anis_nerf/: anis_nerf_config.py  anis_nerf_datamanager.py  anis_nerf_field.py  anis_nerf_model.py  anis_nerf_pipeline.py  spherical_harmonics.py
nerfify/implementations/ar_nerf/: ar_nerf_datamanager.py  ar_nerf_datamanager_dtu.py  ar_nerf_field.py  ar_nerf_model.py  ar_nerf_pipeline.py  ar_nerf_pipeline_dtu.py  config.py
nerfify/implementations/hyb_nerf/: template_config.py  template_datamanager.py  (+3 more)
nerfify/templates/: index.html
(+52 files in other folders)
